<resources>
    <string name="app_name">AppLib</string>
    <string name="group_toast_task" translatable="false">获取线路接口出错</string>
    <string name="group_toast_check" translatable="false">获取详细任务出错</string>
    <string name="group_toast_contrast" translatable="false">获取人员线路出错</string>
    <string name="login_tost_error" translatable="false">帐号错误</string>
    <string name="login_account_bt_text" translatable="false">登录</string>
    <string name="login_account_tv_workcard_text" translatable="false">【工牌】登录</string>
    <string name="login_id_tv_number_text" translatable="false">帐号登录</string>
    <string name="task_upcoming_tv_workname_text" translatable="false">热轧机械日常点检线路</string>
    <string name="task_upcoming_tv_time_text" translatable="false">13：00-18：00</string>
    <string name="task_upcoming_tv_percent_text" translatable="false">(0/100)</string>
    <string name="task_upcoming_tv_refer_text" translatable="false">未开始</string>
    <string name="regio_bt_text" translatable="false">扫描二维码</string>
    <string name="check_label_tv_text" translatable="false">设备名称</string>
    <string name="snap_toast_finish_text" translatable="false">临时任务已完成</string>
    <string name="snap_refer_bt_text" translatable="false">批量提交</string>
    <string name="snap_adapter_tvdesc_text" translatable="false">计划任务： 查看项目</string>
    <string name="snap_adapter_tvests_text" translatable="false">判断标准:XXXX</string>
    <string name="snap_adapter_tvmor_text" translatable="false">更多详情</string>
    <string name="snap_adapter_tvstar_text" translatable="false">开始测量</string>
    <string name="snap_adapter_btnormal_text" translatable="false">正常</string>
    <string name="snap_adapter_btabnormal_text" translatable="false">异常</string>
    <string name="upcom_watch_tvresult_text" translatable="false">上一周期结果：正常</string>
    <string name="over_undete_tvtaskname_text" translatable="false">任务详情信息:XXXXXX</string>
    <string name="over_undete_tvnumber_text" translatable="false">XXX</string>
    <string name="over_undete_tvrearson_text" translatable="false">漏检原因:</string>
    <string name="over_undete_etrearson_hint" translatable="false">输入漏检原因</string>
    <string name="over_undete_btcomplete_text" translatable="false">保存</string>
    <string name="upcom_check_tvsort_text" translatable="false">排序</string>
    <string name="upcom_abnormal_tv_title_text" translatable="false">异常信息</string>
    <string name="upcom_abnormal_toast_text" translatable="false">请选择设备</string>
    <string name="upcom_abnormal_tv_equipment_text" translatable="false">加热陆风机房区域-设备XXXXXXXX</string>
    <string name="upcom_abnormal_tv_inspect_text" translatable="false">检查项目：XXXXXXX</string>
    <string name="upcom_abnormal_tv_depict_text" translatable="false">详细描述：</string>
    <string name="upcom_abnormal_et_abnormal_hint" translatable="false">输入发生异常的详细信息</string>
    <string name="upcom_abnormal_tv_mobject_info_text" translatable="false">设备信息：</string>
    <string name="upcom_abnormal_tv_device_hint" translatable="false">请输入异常发生的设备信息</string>
    <string name="upcom_abnormal_tv_devices_text" translatable="false">选择</string>
    <string name="upcom_abnormal_tv_abnormal_text" translatable="false">异常标题：</string>
    <string name="upcom_abnormal_et_exception_title_hint" translatable="false">设备信息+时间+用户自输入</string>
    <string name="upcom_meter_tv_equipment_text" translatable="false">设备XXXXXX</string>
    <string name="upcom_meter_tv_meter_text" translatable="false">抄表值：</string>
    <string name="upcom_meter_et_meter_hint" translatable="false">输入仪表值</string>
    <string name="upcom_meter_tv_standard" translatable="false">上限：XX</string>
    <string name="upcom_meter_tv_parmlower_text" translatable="false">标准：XX</string>
    <string name="upcom_meter_tv_parmupper_text" translatable="false">下限：XX</string>
    <string name="upcom_meter_tv_remark_text" translatable="false">备注信息</string>
    <string name="upcom_meter_et_remarks_hint" translatable="false">输入备注信息</string>
    <string name="snap_frament_tv_preservation_text" translatable="false">未完成</string>
    <string name="excdelegate_fragment_adapter_tv_message_text" translatable="false">出现异常信息</string>
    <string name="excdelegate_frament_adapter_tv_mobject_text" translatable="false">等待处理</string>
    <string name="excdelegate_fragment_adapter_tv_time_text" translatable="false">2018-10-18</string>
    <string name="excdelegate_fragment_adapter_tv_inspect_text" translatable="false">XXXXXXXXXXXXX</string>
    <string name="excdelegate_frament_adapter_tv_user_text" translatable="false">设备名称+时间+用户输入信息</string>
    <string name="excdelegate_fragment_toast_fableft_text" translatable="false">当前无网络连接，无法同步</string>
    <string name="excdelegate_fragment_toast_imgsearch_text" translatable="false">当前无网络连接，无法搜索</string>
    <string name="excdelegate_devices_tv_mobjectcode_text" translatable="false">编码xxx</string>
    <string name="excdelegate_devices_tv_location_text" translatable="false">西南一区</string>
    <string name="testdelegate_fragment_tv_vibration_text" translatable="false">振动</string>
    <string name="testdelegate_fragment_tv_imaging_text" translatable="false">热成像</string>
    <string name="testdelegate_fragment_tv_history_text" translatable="false">临测历史</string>
    <string name="upcom_measure_tv_notconnect_text" translatable="false">传感器未连接</string>
    <string name="upcom_measure_tv_connect_text" translatable="false">点击连接</string>
    <string name="upcom_measure_tv_signal_text" translatable="false">强</string>
    <string name="upcom_measure_tv_quantity" translatable="false">72%</string>
    <string name="upcom_measure_tv_speed_text" translatable="false">速度：</string>
    <string name="upcom_measure_tv_speed_value_text" translatable="false">（XX）m/s</string>
    <string name="upcom_measure_tv_speed_section_text" translatable="false">值1—值2</string>
    <string name="upcom_measure_tv_speed_text_text" translatable="false">（有效值）</string>
    <string name="upcom_measure_bt_speed_text" translatable="false">波形频谱图</string>
    <string name="upcom_measure_tv_acceleratiom_text" translatable="false">加速度：</string>
    <string name="upcom_measure_tv_acceleration_value_text" translatable="false">- - . - -</string>
    <string name="upcom_measure_tv_lash_text" translatable="false">冲击：</string>
    <string name="upcom_measure_tv_temperatrue" translatable="false">温度：</string>
    <string name="upcom_measure_tv_tempratrue_value_text" translatable="false">（XX）ºC</string>
    <string name="upcom_measure_bt_preservation_text" translatable="false">保存（测量中）</string>
    <string name="upcom_measure_bt_retest_text" translatable="false">开始</string>
    <string name="excdelegate_fragment_adapter_holder_one_text" translatable="false">误报并关闭</string>
    <string name="excdelegate_fragment_adapter_holder_two_text" translatable="false">简单处理关闭</string>
    <string name="excdelegate_fragment_adapter_holder_three_text" translatable="false">转检修</string>
    <string name="excdelegate_fragment_adapter_holder_four_textfour" translatable="false">等待处理</string>
    <string name="test_thermal_tv_name_text" translatable="false">临测-热红外成像</string>
    <string name="test_thermal_tv_thermal_text" translatable="false">拍照</string>
    <string name="test_vibration_tv_analyse_text" translatable="false">200HZ</string>
    <string name="test_vibration_tv_sampling_text" translatable="false">256</string>
    <string name="test_vibration_tv_signal_text_text" translatable="false">信号类型：</string>
    <string name="test_vibration_rb_signal1_text" translatable="false">加速度</string>
    <string name="test_vibration_rb_signal2_text" translatable="false">速度</string>
    <string name="test_vibration_rb_signal3_text" translatable="false">温度</string>
    <string name="test_vibration_tv_analyse_text_text" translatable="false">分析频率：</string>
    <string name="test_vibration_rb_analyse1_text" translatable="false">200Hz</string>
    <string name="test_vibration_rb_analyse2_text" translatable="false">500Hz</string>
    <string name="test_vibration_rb_analyse3_text" translatable="false">2kHz</string>
    <string name="test_vibration_rb_analyse4_text" translatable="false">5kHz</string>
    <string name="test_vibration_rb_analyse5_text" translatable="false">1kHz</string>
    <string name="test_vibration_tv_sampling_text_text" translatable="false">采样点数：</string>
    <string name="test_vibration_rb_sampling1" translatable="false">256</string>
    <string name="test_vibration_rb_sampling2_text" translatable="false">512</string>
    <string name="test_vibration_rb_sampling3_text" translatable="false">1024</string>
    <string name="test_vibration_rb_sampling4" translatable="false">2048</string>
    <string name="app_context_tost_result_text" translatable="false">失败了</string>
    <string name="upcom_measure_bt_temperature_text" translatable="false">热成像</string>
    <string name="test_vibration_toast_connect_ok_text" translatable="false">连接成功</string>
    <string name="test_vibration_toast_connect_no_text" translatable="false">失败了,重连中</string>
    <string name="test_temporary_line_name_text" translatable="false">临测保存</string>
    <string name="test_temporary_tv_mobjextinfo_text" translatable="false">设备：</string>
    <string name="test_temporary_tv_device_text" translatable="false">输入所测量的设备信息</string>
    <string name="test_temporary_tv_signal_text" translatable="false">点位：</string>
    <string name="test_temporary_rb_input_text" translatable="false">输入轴</string>
    <string name="test_temporary_rb_output_text" translatable="false">输出轴</string>
    <string name="test_temporary_rb_other_text" translatable="false">其他</string>
    <string name="test_temporary_tv_direction_text" translatable="false">方向：</string>
    <string name="test_temporary_rb_level_text" translatable="false">水平</string>
    <string name="test_temporary_rb_vertical_text" translatable="false">垂直</string>
    <string name="test_temporary_rb_axial_text" translatable="false">轴向</string>
    <string name="test_temporary_tv_remarks_text" translatable="false">备注：</string>
    <string name="test_temporary_et_additional_text" translatable="false">附加信息输入</string>
    <string name="test_temporary_bt_preservation_text" translatable="false">确定</string>
    <string name="test_temporary_bt_retest_text" translatable="false">确定并转异常</string>
    <string name="test_vibration_line_name_text" translatable="false">振动测量</string>
    <string name="test_history_line_name_text" translatable="false">临测历史记录</string>
    <string name="test_history_adapter_tv_vibration_text" translatable="false">振动测量</string>
    <string name="test_history_adapter_tv_mobject_text" translatable="false">输入轴轴向</string>
    <string name="test_history_adapter_tv_remark_text" translatable="false">备注信息：</string>
    <string name="test_history_adapter_tv_abnormal_text" translatable="false">已转异常</string>
    <string name="test_detail_tv_time_text" translatable="false">测量时间：</string>
    <string name="test_detail_line_name_text" translatable="false">临测详情</string>
    <string name="setup_about_line_name_text" translatable="false">关于</string>
    <string name="upcom_vibra_tv_temperatrue_text" translatable="false">（测量值）</string>
    <string name="upcom_vibra_tv_acceleration_text" translatable="false">（峰值）</string>
    <string name="setup_about_tv_introduce_text">软件介绍：简智达推出的蓝牙振动、温度一体传感器，可作为工业现场测振笔的更新换代，通过蓝牙和手机通讯，可将测量结果通过4G或者WIFI传到云端进行数据保存和分析；同时可以作为移动巡点检的移动伴侣，执行巡点检过程中的测振和测温任务，保证了执行的效率和可靠性。</string>
    <string name="setup_about_tv_edition_text">版本 V</string>
    <string name="setup_about_tv_company_text">南京简智达</string>
    <string name="delegate_exception_tv_devicecode_text">设备编码</string>
    <string name="device_details_alarm_tv_message_text">信息</string>
    <string name="device_details_alarm_tv_change_text">离线反馈</string>
    <string name="device_details_alarm_tv_happen_text">发生</string>
    <string name="device_details_alarm_tv_noneed_text">原因分析</string>
    <string name="remind_list_alarm_tv_unit_text">二级单位</string>
</resources>