<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/theme"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:textColor="@color/title_name"
            android:includeFontPadding="false"
            android:id="@+id/line_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/setup_about_line_name_text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:letterSpacing="0.1"
        android:lineSpacingExtra="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:id="@+id/tv_introduce"
        android:includeFontPadding="false"
        android:layout_weight="1"
        android:text="@string/setup_about_tv_introduce_text"
        android:gravity="left"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <LinearLayout
        android:gravity="center"
        android:layout_marginBottom="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16sp"
            android:id="@+id/tv_company"
            android:includeFontPadding="false"
            android:text="@string/setup_about_tv_company_text"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="16sp"
            android:layout_marginLeft="6dp"
            android:id="@+id/tv_edition"
            android:includeFontPadding="false"
            android:text="@string/setup_about_tv_edition_text"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>